bk_ida/gccida/c2/estimate_probability
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/estimate_probability/src/predict.c:811:1: error: must use 'enum' tag to refer to type 'br_predictor'
br_predictor v26; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/estimate_probability/src/predict.c:852:4: error: expected ';' after expression
rtx v67; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/estimate_probability/src/predict.c:852:5: error: use of undeclared identifier 'v67'
rtx v67; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/estimate_probability/src/predict.c:864:1: error: must use 'enum' tag to refer to type 'br_predictor'
br_predictor v79; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/estimate_probability/src/predict.c:873:4: error: expected ';' after expression
rtx v88; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/estimate_probability/src/predict.c:873:5: error: use of undeclared identifier 'v88'
rtx v88; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/estimate_probability/src/predict.c:876:6: error: use of undeclared identifier 'v91'
rtx *v91; // rbp 
     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/estimate_probability/src/predict.c:877:4: error: expected ';' after expression
rtx v92; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/estimate_probability/src/predict.c:877:5: error: use of undeclared identifier 'v92'
rtx v92; // rbp 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/estimate_probability/src/predict.c:937:6: error: use of undeclared identifier 'fld'; did you mean 'fold'?
rtx *fld; // [rsp+0h] [rbp-68h] 
     ^~~
     fold
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/estimate_probability/src/tree.h:2822:13: note: 'fold' declared here
extern tree fold                PARAMS ((tree));
            ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/estimate_probability/src/predict.c:937:5: error: invalid operands to binary expression ('struct rtx_def *' and 'tree (tree)' (aka 'union tree_node *(union tree_node *)'))
rtx *fld; // [rsp+0h] [rbp-68h] 
~~~ ^~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/estimate_probability/src/predict.c:940:4: error: expected ';' after expression
rtx earliest; // [rsp+10h] [rbp-58h] BYREF 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/estimate_probability/src/predict.c:940:5: error: use of undeclared identifier 'earliest'
rtx earliest; // [rsp+10h] [rbp-58h] BYREF 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/estimate_probability/src/predict.c:941:4: error: expected ';' after expression
rtx jump; // [rsp+18h] [rbp-50h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/estimate_probability/src/predict.c:941:5: error: use of undeclared identifier 'jump'
rtx jump; // [rsp+18h] [rbp-50h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/estimate_probability/src/predict.c:1046:1: error: use of undeclared identifier 'jump'
jump = *( rtx *)( v28 + 8); 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/estimate_probability/src/predict.c:1046:16: error: expected expression
jump = *( rtx *)( v28 + 8); 
               ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/estimate_probability/src/predict.c:1081:7: error: use of undeclared identifier 'jump'
v29 = jump; 
      ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/estimate_probability/src/predict.c:1086:1: error: use of undeclared identifier 'jump'
jump = v29; 
^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/estimate_probability/src/obj/predict.o] Error 1
